deploy: 0f59f06ffcf9e26957038e3ad3ab2e75e2baec3c

--- a/stay-home-except-for-essential-needs/index.html
+++ b/stay-home-except-for-essential-needs/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>About COVID-19 restrictions</h1>
           
-            <p class="small-text">Last updated&nbsp;November 30, 2020 at 5:37 PM</p>
+            <p class="small-text">Last updated&nbsp;November 30, 2020 at 6:07 PM</p>
           
         </div>
       </div>
@@ -386,8 +386,8 @@
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
 <p>There has been an unprecedented increase in COVID-19 cases in California. Reducing movement and mixing between people is critical to lowering transmission, hospitalizations, and deaths.</p>
-<p>As of November 21, 2020, the California Department of Public Health (CDPH) advises that all individuals in counties in the Widespread (purple) tier be at home by 10:00 PM, and stay there until 5:00 AM the next day. Exceptions include:</p>
-<ul><li>Individuals going home or to their workplace</li><li>Individuals getting medical assistance</li><li>Those who work during these hours</li><li>Unsheltered persons</li></ul>
+<p>As of November 21, 2020, the California Department of Public Health (CDPH) requires that all individuals in counties in the Widespread (purple) tier be at home by 10:00 PM, and stay there until 5:00 AM the next day. Exceptions include, for example:</p>
+<ul><li>Individuals going home or to their workplace</li><li>Individuals getting medical assistance</li><li>Those who work in critical infrastructure during these hours</li><li>Unsheltered persons</li></ul>
 <p>Interactions during these hours are usually social in nature, and reducing those interactions helps reduce the spread of COVID-19.This advisory is in effect until December 21, 2020, though that may be modified or extended. Read more about <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/limited-stay-at-home-order-qa.aspx">California’s Limited Stay At Home Order</a> on the California Department of Public Health’s website.</p>
 <div style="display:none;"><!-- curfew --></div>
 
