--- a/ar/latest-news/index.html
+++ b/ar/latest-news/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>آخر الأخبار عن COVID-19</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;9:52 م الساعة 30 نوفمبر 2020</p>
+            <p class="small-text">آخر التحديثات&nbsp;8:02 ص الساعة 1 ديسمبر 2020</p>
           
         </div>
       </div>
