--- a/data-and-tools/index.html
+++ b/data-and-tools/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Data and tools</h1>
           
-            <p class="small-text">Last updated&nbsp;November 30, 2020 at 9:52 PM</p>
+            <p class="small-text">Last updated&nbsp;December 1, 2020 at 8:02 AM</p>
           
         </div>
       </div>
