deploy: 3fb4dbb0ac395f8aefed774e2607fccd7955125f

--- a/vi/index.html
+++ b/vi/index.html
@@ -384,7 +384,7 @@
 				</article>
 
 				<a href="https://youtu.be/8S5iiKx5dhc" data-video="8S5iiKx5dhc" class="link-arrow-blue video-modal-open trigger mt-4" data-video="8S5iiKx5dhc">
-					<div class="link-arrow-label">More video messages</div>
+					<div class="link-arrow-label">Watch video</div>
 					<cagov-arrow></cagov-arrow>
 				</a>
 
