--- a/industry-guidance/index.html
+++ b/industry-guidance/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Industry guidance to reduce risk</h1>
           
-            <p class="small-text">Last updated&nbsp;November 25, 2020 at 6:58 PM</p>
+            <p class="small-text">Last updated&nbsp;December 1, 2020 at 9:24 AM</p>
           
         </div>
       </div>
@@ -179,7 +179,7 @@
 
 
 
-<p>California has a <a href="https://covid19.ca.gov/safer-economy">Blueprint for a Safer Economy</a> in the state with revised criteria for loosening and tightening restrictions on activities. </p>
+<p>California has a <a href="https://covid19.ca.gov/safer-economy">Blueprint for a Safer Economy</a> in the state with revised criteria for loosening and tightening restrictions on activities.&nbsp;</p>
 
 
 
@@ -1743,7 +1743,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4 id="restaurants"><span class="ca-gov-icon-restaurant"></span> Restaurants, wineries, and bars &#8211; updated November 25</h4>
+<h4 id="restaurants"><span class="ca-gov-icon-restaurant"></span> Restaurants, wineries, and bars &#8211; updated December 1</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -1758,21 +1758,16 @@
 <p>Minimal (yellow)</p>
 <ul><li>Restaurants:&nbsp;<ul><li>Indoor with modifications</li><li>Capacity must be limited to 50%</li></ul></li><li>Wineries&nbsp;and tasting rooms:<ul><li>Indoor with modifications</li><li>Capacity must be limited to 50% or 200 people, whichever is less</li></ul></li><li>Bars, breweries, and distilleries:&nbsp;<ul><li>Indoor with modifications</li><li>Capacity must be limited to 50%</li></ul></li></ul>
 <p><strong>Restaurants</strong></p>
-<p>Follow this <a href="https://files.covid19.ca.gov/pdf/guidance-restaurants-bars-wineries--en.pdf">guidance for restaurants</a> to support a safe, clean environment for workers and customers.</p>
+<p>Follow this <a href="https://files.covid19.ca.gov/pdf/guidance-restaurants-bars-wineries--en.pdf">guidance for restaurants</a> to support a safe, clean environment for workers and customers. Review the guidance, prepare a plan, and post the <a href="https://files.covid19.ca.gov/pdf/checklist-restaurants-bars--en.pdf">checklist for restaurants</a> in your workplace to show customers and employees that you’ve reduced the risk and are open for business.</p>
 <p><strong>Wineries and tasting rooms</strong></p>
-<ul><li>Follow this <a href="https://files.covid19.ca.gov/pdf/guidance-wineries--en.pdf">guidance for wineries and tasting rooms</a> <strong>that do not serve meals</strong> to support a safe, clean environment for workers and customers. Establishments that serve meals must follow the guidance for restaurants.&nbsp;</li></ul>
+<p>Follow this <a href="https://files.covid19.ca.gov/pdf/guidance-wineries--en.pdf">guidance for wineries and tasting rooms</a> <strong>that do not serve meals</strong> to support a safe, clean environment for workers and customers. Review the guidance, prepare a plan, and post the <a href="https://files.covid19.ca.gov/pdf/checklist-wineries--en.pdf">checklist for wineries</a> in your workplace to show customers and employees that you’ve reduced the risk and are open for business. Establishments that serve meals must follow the guidance and checklist for restaurants.</p>
 <p><strong>Bars, breweries, and distilleries</strong></p>
-<ul><li>Follow this <a href="https://files.covid19.ca.gov/pdf/guidance-bars--en.pdf">guidance for bars, breweries, and distilleries</a> <strong>that do not serve meals</strong> to support a safe, clean environment for workers and customers. Establishments that serve meals must follow the guidance for restaurants.&nbsp;</li></ul>
-<p>Review the guidance, prepare a plan, and post the <a href="https://files.covid19.ca.gov/pdf/checklist-restaurants-bars--en.pdf">checklist for restaurants, wineries, and bars</a> in your workplace to show customers and employees that you’ve reduced the risk and are open for business.</p>
+<p>Follow this <a href="https://files.covid19.ca.gov/pdf/guidance-bars--en.pdf">guidance for bars, breweries, and distilleries</a> <strong>that do not serve meals</strong> to support a safe, clean environment for workers and customers. Review the guidance, prepare a plan, and post the <a href="https://files.covid19.ca.gov/pdf/checklist-bars--en.pdf">checklist for bars</a> in your workplace to show customers and employees that you’ve reduced the risk and are open for business. Establishments that serve meals must follow the guidance and checklist for restaurants.</p>
 
       </div>
     </div>
   </div>
 </cwds-accordion>
-
-
-
-
 
 
 
