--- a/ar/safer-economy/index.html
+++ b/ar/safer-economy/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>مخطط لاقتصاد أكثر أمانًا (Blueprint for a Safer Economy)</h1>
           
-            <p class="small-text">Last updated&nbsp;9:42 ص الساعة 1 ديسمبر 2020</p>
+            <p class="small-text">Last updated&nbsp;12:39 م الساعة 1 ديسمبر 2020</p>
           
         </div>
       </div>
