--- a/es/index.html
+++ b/es/index.html
@@ -168,32 +168,32 @@
 				</div>
 				<div class="hero-stats" role="region" aria-labelledby="tracking-covid">
 					<h2 class="hero-stats-headline" id="tracking-covid">Seguimiento de COVID-19</h2>
-					<div class="hero-stats-subheadline">Números actualizados (30 de noviembre de 2020 a las 11:00 a. m.) con información (del 29 de noviembre de 2020)</div>
+					<div class="hero-stats-subheadline">Números actualizados (1 de diciembre de 2020 a las 11:00 a. m.) con información (del 30 de noviembre de 2020)</div>
 					<div class="hero-stats-slider">
 						<div class="hero-stats-slide" aria-hidden="true" aria-labelledby="cumulative-stats">
 							<div class="hero-stats-row">
 								<div class="hero-stats-row-label">
 									<span class="hero-stats-row-label-text">Número total de casos</span>
 								</div>
-								<div class="hero-stats-row-figure">1,212,968</div>
+								<div class="hero-stats-row-figure">1,225,189</div>
 								<div class="hero-stats-row-details">
-									+1.2% 
+									+1% 
 								</div>
 							</div>
 							<div class="hero-stats-row">
 								<div class="hero-stats-row-label">
 									<span class="hero-stats-row-label-text">Número total de fallecidos</span>
 								</div>
-								<div class="hero-stats-row-figure">19,141</div>
+								<div class="hero-stats-row-figure">19,211</div>
 								<div class="hero-stats-row-details">
-									+0.1%
+									+0.4%
 								</div>
 							</div>
 							<div class="hero-stats-row">
 								<div class="hero-stats-row-label">
 									<span class="hero-stats-row-label-text">Testeos reportados</span>
 								</div>
-								<div class="hero-stats-row-figure">24,025,171</div>
+								<div class="hero-stats-row-figure">24,161,313</div>
 								<div class="hero-stats-row-details">					
 								</div>
 							</div>
