--- a/zh-hans/latest-news/index.html
+++ b/zh-hans/latest-news/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>有关COVID-19的最新消息</h1>
           
-            <p class="small-text">Last updated&nbsp;December 1, 2020 at 9:42 AM</p>
+            <p class="small-text">Last updated&nbsp;December 1, 2020 at 12:39 PM</p>
           
         </div>
       </div>
