Added WP translations for social determinants chart. Removed some console logs.

--- a/pages/wordpress-posts/equity.html
+++ b/pages/wordpress-posts/equity.html
@@ -440,6 +440,8 @@ addtositemap: false
     <li data-label="footnote">Note: Data comes from the American Community Survey and is statewide. It does not reflect individual counties. Data shown is cumulative for the last 7 days and updated daily</li>
    <li data-label="casesPer100KPeople">Cases per 100k people</li>
    <li data-label="statewideCaseRate">Statewide case rate:</li>
+   <li data-label="ariaBarLabel">placeholderCaseRate cases per 100K people. placeholderRateDiff30 change since previous week</li>
+   <li data-label="tooltipCaption"><span class="highlight-data">placeholderCaseRate</span> cases per 100K people. placeholderRateDiff30 change since previous week</li>
   </ul></cagov-chart-d3-bar>
 
 
