--- a/housing-and-homelessness/index.html
+++ b/housing-and-homelessness/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Housing and homelessness</h1>
           
-            <p class="small-text">Last updated&nbsp;November 25, 2020 at 4:24 PM</p>
+            <p class="small-text">Last updated&nbsp;December 1, 2020 at 2:14 PM</p>
           
         </div>
       </div>
@@ -175,7 +175,7 @@
 
 
 
-<h2 class="js-qa-question"><strong><strong><strong>Help for renters, homeowners</strong></strong></strong>, and small landlords</h2>
+<h2 class="js-qa-question">Help for renters, homeowners, and small landlords</h2>
 
 
 
