--- a/index.html
+++ b/index.html
@@ -317,31 +317,19 @@
 								<cagov-arrow></cagov-arrow>
 							</a>
 						</li>
+						</ul>
+					</div>
+					<div class="faq trigger">
+						<ul class="arrow-links">
 						<li>    
 							<a class="link-arrow-white" href="get-financial-help/">
 								<div class="link-arrow-label">Can I get financial help?</div>
 								<cagov-arrow></cagov-arrow>
 							</a>
 						</li>
-						</ul>
-					</div>
-					<div class="faq trigger">
-						<ul class="arrow-links">
-						<li>    
-							<a class="link-arrow-white" href="industry-guidance/">
-								<div class="link-arrow-label">How can I safely open my business?</div>
-								<cagov-arrow></cagov-arrow>
-							</a>
-						</li>
 						<li>    
 							<a class="link-arrow-white" href="education/">
 								<div class="link-arrow-label">How are schools and colleges reopening?</div>
-								<cagov-arrow></cagov-arrow>
-							</a>
-						</li>
-						<li>    
-							<a class="link-arrow-white" href="childcare/">
-								<div class="link-arrow-label">Where can I find childcare?</div>
 								<cagov-arrow></cagov-arrow>
 							</a>
 						</li>
@@ -372,7 +360,7 @@
 			<article>    
 				<a class="link-arrow-blue" href="https://covid19.ca.gov/industry-guidance/">
 				<div class="link-arrow-label">
-					What is the guidance to safely open my business?
+					How can I safely open my business?
 				</div>
 				<cagov-arrow></cagov-arrow>
 				</a>
