--- a/vi/index.html
+++ b/vi/index.html
@@ -319,7 +319,7 @@
 							</a>
 						</li>
 						<li>    
-							<a class="link-arrow-white" href="get-financial-help/">
+							<a class="link-arrow-white" href="symptoms-and-risks/">
 								<div class="link-arrow-label">Có những triệu chứng và nguy cơ gì?</div>
 								<cagov-arrow></cagov-arrow>
 							</a>
@@ -329,7 +329,7 @@
 					<div class="faq trigger">
 						<ul class="arrow-links">
 						<li>    
-							<a class="link-arrow-white" href="industry-guidance/">
+							<a class="link-arrow-white" href="get-financial-help/">
 								<div class="link-arrow-label">Tôi có thể mở cửa doanh nghiệp an toàn bằng cách nào?</div>
 								<cagov-arrow></cagov-arrow>
 							</a>
@@ -341,7 +341,7 @@
 							</a>
 						</li>
 						<li>    
-							<a class="link-arrow-white" href="childcare/">
+							<a class="link-arrow-white" href="masks-and-ppe/">
 								<div class="link-arrow-label">Tôi có thể tìm thấy dịch vụ chăm sóc trẻ em ở đâu?</div>
 								<cagov-arrow></cagov-arrow>
 							</a>
@@ -373,7 +373,7 @@
 			<article>    
 				<a class="link-arrow-blue" href="https://covid19.ca.gov/industry-guidance/">
 				<div class="link-arrow-label">
-					What is the guidance to safely open my business?
+					How can I safely open my business?
 				</div>
 				<cagov-arrow></cagov-arrow>
 				</a>
