--- a/ko/index.html
+++ b/ko/index.html
@@ -317,7 +317,7 @@
 							</a>
 						</li>
 						<li>    
-							<a class="link-arrow-white" href="get-financial-help/">
+							<a class="link-arrow-white" href="symptoms-and-risks/">
 								<div class="link-arrow-label">해당 증상 및 위험?</div>
 								<cagov-arrow></cagov-arrow>
 							</a>
@@ -327,7 +327,7 @@
 					<div class="faq trigger">
 						<ul class="arrow-links">
 						<li>    
-							<a class="link-arrow-white" href="industry-guidance/">
+							<a class="link-arrow-white" href="get-financial-help/">
 								<div class="link-arrow-label">안전한 사업체 운영 재개 방법?</div>
 								<cagov-arrow></cagov-arrow>
 							</a>
@@ -339,7 +339,7 @@
 							</a>
 						</li>
 						<li>    
-							<a class="link-arrow-white" href="childcare/">
+							<a class="link-arrow-white" href="masks-and-ppe/">
 								<div class="link-arrow-label">보육 시설 찾기?</div>
 								<cagov-arrow></cagov-arrow>
 							</a>
@@ -371,7 +371,7 @@
 			<article>    
 				<a class="link-arrow-blue" href="https://covid19.ca.gov/industry-guidance/">
 				<div class="link-arrow-label">
-					What is the guidance to safely open my business?
+					How can I safely open my business?
 				</div>
 				<cagov-arrow></cagov-arrow>
 				</a>
