--- a/pages/wordpress-posts/equity.html
+++ b/pages/wordpress-posts/equity.html
@@ -275,16 +275,12 @@ addtositemap: false
             <li data-label="chartLegend1State--cases">of cases statewide</li>
             <li data-label="chartLegend1State--deaths">of deaths statewide</li>
             <li data-label="chartLegend1State--tests">of testing statewide</li>
-            <li data-label="chartLegend2--cases">of state population</li>
-            <li data-label="chartLegend2--deaths">of state population</li>
-            <li data-label="chartLegend2--tests">of state population</li>
+            <li data-label="chartLegend2State">of state population</li>
+            <li data-label="chartLegend2County">of county population</li>
             <li data-label="chartDescription--cases">Compare the percentage of each race and ethnicity’s share of statewide cases to their percentage of placeholderForDynamicLocation’s population.</li>
             <li data-label="chartDescription--deaths">Compare the percentage of each race and ethnicity’s share of statewide deaths to their percentage of placeholderForDynamicLocation’s population.</li>
             <li data-label="chartDescription--tests">Compare the percentage of each race and ethnicity’s share of statewide tests to their percentage of placeholderForDynamicLocation’s population.</li>
             <li data-label="chartLineDiff">change since previous month</li>
-            <li data-label="relative-percentage-state-population">% of state population</li>
-            <li data-label="relative-percentage-statewide">% of cases statewide</li>
-            <li data-label="relative-percentage-county">% of cases in county</li>
             <li data-label="county-label">County</li>
             <li data-label="applied-suppression-total">To protect people’s privacy, we’re not showing any data. This is because there’s either too few cases or tests in this group.</li>
             <li data-label="applied-suppression-population">To protect people’s privacy, we’re not showing any data. This is because there are less than 20,000 people in this group.</li>
