--- a/industry-guidance/index.html
+++ b/industry-guidance/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Industry guidance to reduce risk</h1>
           
-            <p class="small-text">Last updated&nbsp;December 1, 2020 at 9:24 AM</p>
+            <p class="small-text">Last updated&nbsp;December 1, 2020 at 4:43 PM</p>
           
         </div>
       </div>
@@ -1395,12 +1395,12 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4 id="campgrounds-outdoor-recreation"><span class="ca-gov-icon-tent"></span> Outdoor recreation, including campgrounds and playgrounds &#8211; updated October 14</h4>
+<h4 id="campgrounds-outdoor-recreation"><span class="ca-gov-icon-tent"></span> Outdoor recreation, including campgrounds, playgrounds, and ski resorts &#8211; updated December 1</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>Follow this <a href="https://files.covid19.ca.gov/pdf/guidance-campgrounds-outdoor-recreation--en.pdf">guidance for campgrounds</a>, RV parks, and outdoor recreation to create a safer environment for workers and patrons. </p>
+<p>Follow this <a href="https://files.covid19.ca.gov/pdf/guidance-campgrounds-outdoor-recreation--en.pdf">guidance for campgrounds</a>, RV parks, ski operations, and other outdoor recreation to create a safer environment for workers and patrons. </p>
 <p>Review the guidance and prepare a plan for your workplace to show customers and employees that you’ve reduced the risk and are open for business.</p>
 <p>Outdoor playgrounds can open with modifications in all tiers. See <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Outdoor%20Playgrounds%20and%20other%20Outdoor%20Recreational%20Facilities.aspx">requirements for outdoor playgrounds</a> to keep them safe and fun for everyone.</p>
 <p>Outdoor skateparks can open with modifications in all tiers. Attendees must adhere to physical distancing requirements and mask wearing as outlined in the <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Outdoor%20Playgrounds%20and%20other%20Outdoor%20Recreational%20Facilities.aspx">outdoor playground guidance</a>.</p>
