deploy: 4a6130183753dff498077e851c1a0a5cdd87a15d

--- a/stay-home-except-for-essential-needs/index.html
+++ b/stay-home-except-for-essential-needs/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>About COVID-19 restrictions</h1>
           
-            <p class="small-text">Last updated&nbsp;November 30, 2020 at 6:07 PM</p>
+            <p class="small-text">Last updated&nbsp;December 2, 2020 at 9:50 AM</p>
           
         </div>
       </div>
@@ -1148,6 +1148,7 @@
       <div class="card-body">
 <p>Outdoor swimming pools are allowed to open in all counties in California. Outdoor pools must close slides, rides, or other attractions.&nbsp;</p>
 <p>Indoor swimming pools are closed in counties in the <a href="https://covid19.ca.gov/safer-economy">Widespread (purple) or Substantial (red) tiers</a>.</p>
+<p>Drowning prevention classes are permitted in indoor and outdoor swimming pools in all tiers, as they are deemed essential.</p>
 <p>Water parks, both indoor and outdoor, remain closed throughout the state.</p>
 <p>When out of the water, masks or face coverings should be worn. Physical distancing should be practiced at all times. Group gatherings are not allowed. Bring your own towel, and don&#8217;t share items that are worn on the face (like goggles, nose clips, or snorkels). Pool operators should follow heightened cleaning and safety guidance in response to COVID-19. See sector guidance for <a href="https://files.covid19.ca.gov/pdf/guidance-fitness--en.pdf">gyms and fitness centers</a> and <a href="https://files.covid19.ca.gov/pdf/guidance-campgrounds-outdoor-recreation--en.pdf">campgrounds and outdoor recreation</a>.</p>
 
@@ -1155,6 +1156,10 @@
     </div>
   </div>
 </cwds-accordion>
+
+
+
+
 
 
 
