--- a/ko/data-and-tools/index.html
+++ b/ko/data-and-tools/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>데이터 및 도구</h1>
           
-            <p class="small-text">Last updated&nbsp;2020년 12월 1일 오후 4:47</p>
+            <p class="small-text">Last updated&nbsp;2020년 12월 2일 오전 9:53</p>
           
         </div>
       </div>
