--- a/tl/data-and-tools/index.html
+++ b/tl/data-and-tools/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Mga datos at tool</h1>
           
-            <p class="small-text">Last updated&nbsp;Disyembre 1, 2020 sa 4:47 PM</p>
+            <p class="small-text">Last updated&nbsp;Disyembre 2, 2020 sa 9:53 AM</p>
           
         </div>
       </div>
