--- a/ar/index.html
+++ b/ar/index.html
@@ -166,32 +166,32 @@
 				</div>
 				<div class="hero-stats" role="region" aria-labelledby="tracking-covid">
 					<h2 class="hero-stats-headline" id="tracking-covid">تتبع COVID-19</h2>
-					<div class="hero-stats-subheadline">أرقام محدثة 11:00 ص الساعة 1 ديسمبر 2020 بمعلومات من 30 نوفمبر 2020</div>
+					<div class="hero-stats-subheadline">أرقام محدثة 11:00 ص الساعة 2 ديسمبر 2020 بمعلومات من 1 ديسمبر 2020</div>
 					<div class="hero-stats-slider">
 						<div class="hero-stats-slide" aria-hidden="true" aria-labelledby="cumulative-stats">
 							<div class="hero-stats-row">
 								<div class="hero-stats-row-label">
 									<span class="hero-stats-row-label-text">العدد الإجمالي للحالات</span>
 								</div>
-								<div class="hero-stats-row-figure">1,225,189</div>
+								<div class="hero-stats-row-figure">1,245,948</div>
 								<div class="hero-stats-row-details">
-									+1% 
+									+1.7% 
 								</div>
 							</div>
 							<div class="hero-stats-row">
 								<div class="hero-stats-row-label">
 									<span class="hero-stats-row-label-text">إجمالي عدد المتوفين</span>
 								</div>
-								<div class="hero-stats-row-figure">19,211</div>
+								<div class="hero-stats-row-figure">19,324</div>
 								<div class="hero-stats-row-details">
-									+0.4%
+									+0.6%
 								</div>
 							</div>
 							<div class="hero-stats-row">
 								<div class="hero-stats-row-label">
 									<span class="hero-stats-row-label-text">الاختبارات المبلغ عنها</span>
 								</div>
-								<div class="hero-stats-row-figure">24,161,313</div>
+								<div class="hero-stats-row-figure">24,299,126</div>
 								<div class="hero-stats-row-details">					
 								</div>
 							</div>
