--- a/es/industry-guidance/index.html
+++ b/es/industry-guidance/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Guía para las industrias para reducir el riesgo</h1>
           
-            <p class="small-text">Última actualización&nbsp;25 de noviembre de 2020 a las 6:58 p. m.</p>
+            <p class="small-text">Última actualización&nbsp;1 de diciembre de 2020 a las 9:24 a. m.</p>
           
         </div>
       </div>
@@ -1743,7 +1743,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4 id="restaurants"><span class="ca-gov-icon-restaurant"></span> Restaurantes, bodegas de vino y bares: actualizado el 25 de noviembre</h4>
+<h4 id="restaurants"><span class="ca-gov-icon-restaurant"></span> Restaurantes, bodegas de vino y bares: actualizado el 1.º de diciembre</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -1758,21 +1758,16 @@
 <p>Mínimo (amarillo)</p>
 <ul><li>Restaurantes: <ul><li>En interiores con modificaciones.</li><li>La capacidad debe limitarse al 50 %.</li></ul></li><li>Bodegas de vino y salas de degustación:<ul><li>En interiores con modificaciones.</li><li>Se debe limitar al 50 % de la capacidad o a 200 personas, lo que sea menor.</li></ul></li><li>Bares, cervecerías y destilerías: <ul><li>En interiores con modificaciones.</li><li>La capacidad debe limitarse al 50 %.</li></ul></li></ul>
 <p><strong>Restaurantes</strong></p>
-<p>Siga esta <a href="https://files.covid19.ca.gov/pdf/guidance-restaurants-bars-wineries--es.pdf">guía para restaurantes</a> para apoyar un entorno seguro y limpio para los trabajadores y clientes.</p>
+<p>Siga esta <a href="https://files.covid19.ca.gov/pdf/guidance-restaurants-bars-wineries--es.pdf">guía para restaurantes</a> para apoyar un entorno seguro y limpio para los trabajadores y clientes. Revise la guía, prepare un plan y publique la <a href="https://files.covid19.ca.gov/pdf/checklist-restaurants-bars--es.pdf">lista de verificación para restaurantes</a> en su lugar de trabajo para mostrar a sus clientes y empleados que ha reducido el riesgo y que está abierto para trabajar.</p>
 <p><strong>Bodegas de vino y salas de degustación</strong></p>
-<ul><li>Siga esta <a href="https://files.covid19.ca.gov/pdf/guidance-wineries--en.pdf">guía para bodegas de vino y salas de degustación</a> <strong> que no sirvan comidas</strong> para apoyar un entorno seguro y limpio para los trabajadores y clientes. Los establecimientos que sirven comidas deben seguir la guía para restaurantes. </li></ul>
+<p>Siga esta <a href="https://files.covid19.ca.gov/pdf/guidance-wineries--en.pdf">guía para bodegas de vino y salas de degustación</a> <strong> que no sirvan comidas</strong> para apoyar un entorno seguro y limpio para los trabajadores y clientes. Revise la guía, prepare un plan y publique la <a href="https://files.covid19.ca.gov/pdf/checklist-wineries--en.pdf">lista de verificación para bodegas de vino</a> en su lugar de trabajo para mostrar a sus clientes y empleados que ha reducido el riesgo y que está abierto para trabajar. Los establecimientos que sirven comidas deben seguir la guía y la lista de verificación para restaurantes.</p>
 <p><strong>Bares, cervecerías y destilerías</strong></p>
-<ul><li>Siga esta <a href="https://files.covid19.ca.gov/pdf/guidance-bars--en.pdf">guía para bares, cervecerías y destilerías</a> <strong> que no sirvan comidas</strong> para apoyar un entorno seguro y limpio para los trabajadores y clientes. Los establecimientos que sirven comidas deben seguir la guía para restaurantes. </li></ul>
-<p>Revise la guía, prepare un plan y publique la <a href="https://files.covid19.ca.gov/pdf/checklist-restaurants-bars--es.pdf">lista de verificación para restaurantes, bodegas de vino y bares</a> en su lugar de trabajo para mostrar a sus clientes y empleados que ha reducido el riesgo y que está abierto para trabajar.</p>
+<p>Siga esta <a href="https://files.covid19.ca.gov/pdf/guidance-bars--en.pdf">guía para bares, cervecerías y destilerías</a> <strong> que no sirvan comidas</strong> para apoyar un entorno seguro y limpio para los trabajadores y los clientes. Revise la guía, prepare un plan y publique la <a href="https://files.covid19.ca.gov/pdf/checklist-bars--en.pdf">lista de verificación para bares</a> en su lugar de trabajo para mostrar a sus clientes y empleados que ha reducido el riesgo y que está abierto para trabajar. Los establecimientos que sirven comidas deben seguir la guía y la lista de verificación para restaurantes.</p>
 
       </div>
     </div>
   </div>
 </cwds-accordion>
-
-
-
-
 
 
 
