--- a/es/taxes/index.html
+++ b/es/taxes/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Impuestos</h1>
           
-            <p class="small-text">Última actualización&nbsp;30 de octubre de 2020 a las 9:13 a. m.</p>
+            <p class="small-text">Última actualización&nbsp;30 de noviembre de 2020 a las 4:40 p. m.</p>
           
         </div>
       </div>
@@ -191,7 +191,7 @@
 
 
 
-<ul><li>El aplazamiento del pago de impuestos sobre la venta y el uso sin intereses de hasta $50,000 para empresas con menos de $5 millones en ventas sujetas a imposición fiscal</li><li>Un crédito fiscal de $1,000 para nuevos empleados contratados por pequeñas empresas (hasta $100,000 por empresa)</li><li>Exclusión de los préstamos perdonados del Programa de Protección de Pagos del ingreso bruto estatal</li><li>Créditos fiscales federales para pequeñas empresas por licencia remunerada de los empleados por COVID-19</li></ul>
+<ul><li>El crédito fiscal por contratación para pequeñas empresas, un crédito fiscal de $1,000 por cada nuevo empleado contratado por pequeñas empresas (hasta $100,000 por empresa)<ul><li>Para solicitar este crédito, visite el <a href="https://www.cdtfa.ca.gov/taxes-and-fees/SB1447-tax-credit.htm">sitio web del Departamento de Administración Tributaria</a>.</li></ul></li><li>El aplazamiento del pago de impuestos sobre la venta y el uso sin intereses de hasta $50,000 para empresas con menos de $5 millones en ventas sujetas a imposición fiscal</li><li>Exclusión de los préstamos perdonados del Programa de Protección de Pagos del ingreso bruto estatal</li><li>Créditos fiscales federales para pequeñas empresas por licencia remunerada de los empleados por COVID-19</li></ul>
 
 
 
