--- a/ko/industry-guidance/index.html
+++ b/ko/industry-guidance/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>위험을 줄이기 위한 업계 지침</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2020년 11월 25일 오후 6:58</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2020년 12월 1일 오전 9:24</p>
           
         </div>
       </div>
@@ -1743,7 +1743,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4 id="restaurants"><span class="ca-gov-icon-restaurant"></span> 음식점, 와이너리 및 술집 – 업데이트 11월 25일</h4>
+<h4 id="restaurants"><span class="ca-gov-icon-restaurant"></span> 일반 대중 식당, 와이너리 및 술집 – 업데이트 12월 1일</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -1758,21 +1758,16 @@
 <p>최소(노란색)</p>
 <ul><li>일반 대중 식당: <ul><li>변경 조치 이행 후 실내 운영 개시</li><li>수용 가능 인원의 50%로 제한</li></ul></li><li>와이너리 및 시음장:<ul><li>변경 조치 이행 후 실내 운영 개시</li><li>수용 가능 인원은 반드시 50% 또는 200명 중 적은 인원수로 제한</li></ul></li><li>술집, 양조장 및 증류주 양조장: <ul><li>변경 조치 이행 후 실내 운영 개시</li><li>수용 가능 인원의 50%로 제한</li></ul></li></ul>
 <p><strong>일반 대중 식당</strong></p>
-<p>본 <a href="https://files.covid19.ca.gov/pdf/guidance-restaurants-bars-wineries--ko.pdf">일반 대중 식당에 관한 지침</a>을 준수하여 근로자와 고객에게 안전하고 청결한 환경을 마련하십시오.</p>
+<p>본 <a href="https://files.covid19.ca.gov/pdf/guidance-restaurants-bars-wineries--ko.pdf">일반 대중 식당에 관한 지침</a>을 준수하여 근로자와 고객에게 안전하고 청결한 환경을 마련하십시오. 지침을 검토하여 계획을 준비하고 <a href="https://files.covid19.ca.gov/pdf/checklist-restaurants-bars--ko.pdf">일반 대중 식당을 위한 체크리스트</a>를 사업장에 게시하여 고객과 직원들에게 귀하의 사업장이 감염 위험을 줄이는 작업을 완료했으며 사업을 재개했음을 알리십시오.</p>
 <p><strong>와이너리 및 시음장</strong></p>
-<ul><li>본 <a href="https://files.covid19.ca.gov/pdf/guidance-wineries--en.pdf">와이너리 및 시음장에 관한 지침</a> <strong>을 준수하여 식사를 제공하지 않으면서</strong> 근로자와 고객에게 안전하고 청결한 환경을 마련하십시오. 식사를 제공하는 시설에서는 일반 대중 식당에 관한 지침울 준수해야 합니다. </li></ul>
+<p>본 <a href="https://files.covid19.ca.gov/pdf/guidance-wineries--en.pdf">와이너리 및 시음장에 관한 지침</a> <strong>을 준수하여 식사를 제공하지 않으면서</strong> 근로자와 고객에게 안전하고 청결한 환경을 마련하십시오. 지침을 검토하여 계획을 준비하고 <a href="https://files.covid19.ca.gov/pdf/checklist-wineries--en.pdf">와이너리를 위한 체크리스트</a>를 사업장에 게시하여 고객과 직원들에게 귀하의 사업장이 감염 위험을 줄이는 작업을 완료했으며 사업을 재개했음을 알리십시오. 식사를 제공하는 시설에서는 일반 대중 식당에 관한 지침과 체크리스트를 준수해야 합니다.</p>
 <p><strong>술집, 양조장 및 증류주 양조장</strong></p>
-<ul><li>본 <a href="https://files.covid19.ca.gov/pdf/guidance-bars--en.pdf">술집, 양조장 및 증류주 양조장에 관한 지침</a> <strong>을 준수하여 식사를 제공하지 않으면서</strong> 근로자와 고객에게 안전하고 청결한 환경을 마련하십시오. 식사를 제공하는 시설에서는 일반 대중 식당에 관한 지침울 준수해야 합니다. </li></ul>
-<p>지침을 검토하여 계획을 준비하고 <a href="https://files.covid19.ca.gov/pdf/checklist-restaurants-bars--ko.pdf">일반 대중 음식점, 와이너리 및 술집을 위한 체크리스트</a>를 사업장에 게재하여 고객과 직원들에게 귀하의 사업장이 감염 위험을 줄이는 작업을 완료했으며 사업을 재개했음을 알리십시오.</p>
+<p>본 <a href="https://files.covid19.ca.gov/pdf/guidance-bars--en.pdf">술집, 양조장 및 증류주 양조장에 관한 지침</a> <strong>을 준수하여 식사를 제공하지 않으면서</strong> 근로자와 고객에게 안전하고 청결한 환경을 마련하십시오. 지침을 검토하여 계획을 준비하고 <a href="https://files.covid19.ca.gov/pdf/checklist-bars--en.pdf">술집을 위한 체크리스트</a>를 사업장에 게시하여 고객과 직원들에게 귀하의 사업장이 감염 위험을 줄이는 작업을 완료했으며 사업을 재개했음을 알리십시오. 식사를 제공하는 시설에서는 일반 대중 식당에 관한 지침과 체크리스트를 준수해야 합니다.</p>
 
       </div>
     </div>
   </div>
 </cwds-accordion>
-
-
-
-
 
 
 
