--- a/ko/taxes/index.html
+++ b/ko/taxes/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>세금</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2020년 10월 30일 오전 9:13</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2020년 11월 30일 오후 4:40</p>
           
         </div>
       </div>
@@ -191,7 +191,7 @@
 
 
 
-<ul><li>과세 대상 매출이 $5,000,000 미만인 기업의 경우 최고 $50,000까지의 판매세/이용세 무이자 과세 연기</li><li>영세 사업체의 신규 채용 직원에 대한 $1,000 세액 공제(사업체 당 $100,000 한도)</li><li>급여 보호 프로그램 융자 탕감분은 주 총소득액에서 제외</li><li>COVID-19 직원 유급 휴가를 위한 영세 사업체 연방 세액 공제</li></ul>
+<ul><li>영세 사업체 채용 세액 공제, 영세 사업체가 새로 채용하는 직원 당 $1,000 세액 공제(사업체 당 최대 $100,000 한도)<ul><li>본 세액 공제를 신청하려면 <a href="https://www.cdtfa.ca.gov/taxes-and-fees/SB1447-tax-credit.htm">세금 서비스 요금 관리부(Department of Tax and Fee Administration) 웹사이트</a>를 방문하십시오.</li></ul></li><li>과세 대상 매출이 $5,000,000 미만인 기업의 경우 최고 $50,000까지의 판매세/이용세 무이자 과세 연기</li><li>급여 보호 프로그램 융자 탕감분은 주 총소득액에서 제외</li><li>COVID-19 직원 유급 휴가를 위한 영세 사업체 연방 세액 공제</li></ul>
 
 
 
