--- a/tl/industry-guidance/index.html
+++ b/tl/industry-guidance/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Gabay sa industriya para mabawasan ang panganib</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Nobyembre 25, 2020 sa 6:58 PM</p>
+            <p class="small-text">Huling na-update&nbsp;Disyembre 1, 2020 sa 9:24 AM</p>
           
         </div>
       </div>
@@ -1743,7 +1743,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4 id="restaurants"><span class="ca-gov-icon-restaurant"></span> Mga restaurant, winery, at bar – na-update noong Nobyembre 25</h4>
+<h4 id="restaurants"><span class="ca-gov-icon-restaurant"></span> Mga restaurant, winery, at bar – na-update noong Disyembre 1</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -1758,21 +1758,16 @@
 <p>Minimal (dilaw)</p>
 <ul><li>Mga restaurant: <ul><li>Indoor nang may mga modipikasyon</li><li>Dapat ay limitado sa 50% ang kapasidad</li></ul></li><li>Mga winery at tasting room:<ul><li>Indoor nang may mga modipikasyon</li><li>Ang kapasidad ay dapat limitado sa 50% o 200 tao, whichever is less</li></ul></li><li>Mga bar, brewery, at distillery: <ul><li>Indoor nang may mga modipikasyon</li><li>Dapat ay limitado sa 50% ang kapasidad</li></ul></li></ul>
 <p><strong>Mga restaurant</strong></p>
-<p>Sundin ang <a href="https://files.covid19.ca.gov/pdf/guidance-restaurants-bars-wineries--tl.pdf">gabay na ito para sa mga restaurant</a> para makagawa ng ligtas na lugar para sa mga manggagawa at customer.</p>
+<p>Sundin ang <a href="https://files.covid19.ca.gov/pdf/guidance-restaurants-bars-wineries--tl.pdf">gabay na ito para sa mga restaurant</a> para makagawa ng ligtas na lugar para sa mga manggagawa at customer. Suriin ang gabay, maghanda ng plano, at ipaskil ang <a href="https://files.covid19.ca.gov/pdf/checklist-restaurants-bars--tl.pdf">checklist para sa mga restaurant</a> sa iyong lugar ng trabaho para maipakita sa mga customer at empleyado na binawasan mo ang panganib at bukas ka na para sa negosyo.</p>
 <p><strong>Mga winery at tasting room</strong></p>
-<ul><li>Sundin ang <a href="https://files.covid19.ca.gov/pdf/guidance-wineries--en.pdf">gabay na ito para sa mga winery at tasting room</a> <strong>na hindi nagse-serve ng mga meal</strong> para makagawa ng ligtas na lugar para sa mga manggagawa at customer. Dapat sumunod ang mga establisyimentong nagse-serve ng mga meal sa gabay para sa mga restaurant. </li></ul>
+<p>Sundin ang <a href="https://files.covid19.ca.gov/pdf/guidance-wineries--en.pdf">gabay na ito para sa mga winery at tasting room</a> <strong>na hindi nagse-serve ng mga meal</strong> para makagawa ng ligtas na lugar para sa mga manggagawa at customer. Suriin ang gabay, maghanda ng plano, at ipaskil ang <a href="https://files.covid19.ca.gov/pdf/checklist-wineries--en.pdf">checklist para sa mga winery</a> sa iyong lugar ng trabaho upang ipakita sa mga customer at empleyado na binawasan mo ang panganib at bukas ka na upang magnegosyo. Dapat sumunod ang mga establisyimentong nagse-serve ng mga meal sa gabay at checklist para sa mga restaurant.</p>
 <p><strong>Mga bar, brewery, at distillery</strong></p>
-<ul><li>Sundin ang <a href="https://files.covid19.ca.gov/pdf/guidance-bars--en.pdf">gabay na ito para sa mga bar, brewery, at distillery</a> <strong>na hindi nagse-serve ng mga meal</strong> para makagawa ng ligtas na lugar para sa mga manggagawa at customer. Dapat sumunod ang mga establisyimentong nagse-serve ng mga meal sa gabay para sa mga restaurant. </li></ul>
-<p><a href="https://files.covid19.ca.gov/pdf/checklist-restaurants-bars--tl.pdf">Suriin ang gabay, maghanda ng plano, at ipaskil ang </a>checklist para sa mga restaurant, winery, at bar sa iyong lugar ng trabaho para maipakita sa mga customer at empleyado na binawasan mo ang panganib at bukas ka na para sa negosyo.</p>
+<p>Sundin ang <a href="https://files.covid19.ca.gov/pdf/guidance-bars--en.pdf">gabay na ito para sa mga bar, brewery, at distillery</a> <strong>na hindi nagse-serve ng mga meal</strong> para makagawa ng ligtas na lugar para sa mga manggagawa at customer. Suriin ang gabay, maghanda ng plano, at ipaskil ang <a href="https://files.covid19.ca.gov/pdf/checklist-bars--en.pdf">checklist para sa mga bar</a> sa iyong lugar ng trabaho upang ipakita sa mga customer at empleyado na binawasan mo ang panganib at bukas ka na upang magnegosyo. Dapat sumunod ang mga establisyimentong nagse-serve ng mga meal sa gabay at checklist para sa mga restaurant.</p>
 
       </div>
     </div>
   </div>
 </cwds-accordion>
-
-
-
-
 
 
 
