--- a/vi/industry-guidance/index.html
+++ b/vi/industry-guidance/index.html
@@ -164,7 +164,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Hướng dẫn dành cho từng ngành nghề để giảm nhẹ rủi ro</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;25 tháng 11, 2020 lúc 18:58</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;1 tháng 12, 2020 lúc 9:24</p>
           
         </div>
       </div>
@@ -1723,7 +1723,7 @@
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
 <p>Tuân thủ <a href="https://files.covid19.ca.gov/pdf/guidance-real-estate--vi.pdf">hướng dẫn cho các doanh nghiệp hoạt động trong ngành bất động sản</a> để tạo ra môi trường an toàn hơn cho người lao động.</p>
-<p>Xem xét hướng dẫn, chuẩn bị kế hoạch và đăng tải<a href="https://files.covid19.ca.gov/pdf/checklist-real-estate--vi.pdf"> danh mục kiểm tra cho ngành bất động sản</a> tại nơi làm việc của quý vị để cho khách hàng và nhân viên thấy quý vị đã giảm thiểu được nguy cơ và sẽ mở cửa kinh doanh trở lại.</p>
+<p>Xem xét hướng dẫn, chuẩn bị kế hoạch và đăng tải<a href="https://files.covid19.ca.gov/pdf/checklist-real-estate--vi.pdf"> danh mục kiểm tra dành cho ngành bất động sản</a> tại nơi làm việc của quý vị để cho khách hàng và nhân viên thấy quý vị đã giảm thiểu được nguy cơ và sẽ mở cửa kinh doanh trở lại.</p>
 
       </div>
     </div>
@@ -1745,7 +1745,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4 id="restaurants"><span class="ca-gov-icon-restaurant"></span> Nhà hàng, xưởng rượu và quán bar – cập nhật ngày 25 tháng 11</h4>
+<h4 id="restaurants"><span class="ca-gov-icon-restaurant"></span> Nhà hàng, xưởng rượu và quán bar – cập nhật ngày 1 tháng 12</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -1760,21 +1760,16 @@
 <p>Tối thiểu (màu vàng)</p>
 <ul><li>Các nhà hàng: <ul><li>Trong nhà với điều chỉnh sửa đổi</li><li>Phải giới hạn sức chứa ở 50%</li></ul></li><li>Xưởng rượu và phòng nếm thử:<ul><li>Trong nhà với điều chỉnh sửa đổi</li><li>Phải giới hạn sức chứa ở 50% hoặc 200 người, tùy theo số lượng nào ít hơn</li></ul></li><li>Quán bar, nhà máy bia và nhà máy chưng cất: <ul><li>Trong nhà với điều chỉnh sửa đổi</li><li>Phải giới hạn sức chứa ở 50%</li></ul></li></ul>
 <p><strong>Các nhà hàng</strong></p>
-<p>Tuân thủ <a href="https://files.covid19.ca.gov/pdf/guidance-restaurants-bars-wineries--vi.pdf">hướng dẫn dành cho các nhà hàng</a> này để hỗ trợ đảm bảo môi trường sạch sẽ, an toàn cho người lao động và khách hàng.</p>
+<p>Tuân thủ <a href="https://files.covid19.ca.gov/pdf/guidance-restaurants-bars-wineries--vi.pdf">hướng dẫn dành cho các nhà hàng</a> này để hỗ trợ đảm bảo môi trường sạch sẽ, an toàn cho người lao động và khách hàng. Xem xét hướng dẫn, lập kế hoạch và đăng tải <a href="https://files.covid19.ca.gov/pdf/checklist-restaurants-bars--vi.pdf">danh mục kiểm tra dành cho các nhà hàng</a> tại cơ sở làm việc của quý vị để cho khách hàng và nhân viên thấy quý vị đã giảm được nguy cơ và mở cửa kinh doanh trở lại.</p>
 <p><strong>Các xưởng rượu và phòng nếm thử</strong></p>
-<ul><li>Tuân thủ <a href="https://files.covid19.ca.gov/pdf/guidance-wineries--en.pdf">hướng dẫn dành cho các xưởng rượu và phòng nếm thử</a> <strong>không phục vụ bữa ăn</strong> này để hỗ trợ đảm bảo môi trường sạch sẽ, an toàn cho người lao động và khách hàng. Các cơ sở phục vụ bữa ăn phải tuân thủ hướng dẫn dành cho các nhà hàng. </li></ul>
+<p>Tuân thủ <a href="https://files.covid19.ca.gov/pdf/guidance-wineries--en.pdf">hướng dẫn dành cho các xưởng rượu và phòng nếm thử</a> <strong>không phục vụ bữa ăn</strong> này để hỗ trợ đảm bảo môi trường sạch sẽ, an toàn cho người lao động và khách hàng. Xem xét hướng dẫn, lập kế hoạch và đăng tải <a href="https://files.covid19.ca.gov/pdf/checklist-wineries--en.pdf">danh mục kiểm tra dành cho các nhà máy rượu</a> tại cơ sở làm việc của quý vị để cho khách hàng và nhân viên thấy quý vị đã giảm được nguy cơ và mở cửa kinh doanh trở lại. Các cơ sở phục vụ bữa ăn phải tuân thủ hướng dẫn và danh mục kiểm tra dành cho các nhà hàng.</p>
 <p><strong>Quán bar, nhà máy bia và nhà máy chưng cất</strong></p>
-<ul><li>Tuân thủ <a href="https://files.covid19.ca.gov/pdf/guidance-bars--en.pdf">hướng dẫn dành cho quán bar, nhà máy bia và nhà máy chưng cất</a> <strong>không phục vụ bữa ăn</strong> này để hỗ trợ đảm bảo môi trường sạch sẽ, an toàn cho người lao động và khách hàng. Các cơ sở phục vụ bữa ăn phải tuân thủ hướng dẫn dành cho các nhà hàng. </li></ul>
-<p>Xem xét hướng dẫn, lập kế hoạch và đăng tải <a href="https://files.covid19.ca.gov/pdf/checklist-restaurants-bars--vi.pdf">danh mục kiểm tra dành cho các nhà hàng, xưởng rượu và quán bar</a> tại cơ sở làm việc của quý vị để cho khách hàng và nhân viên thấy quý vị đã giảm thiểu được nguy cơ và sẽ mở cửa kinh doanh trở lại.</p>
+<p>Tuân thủ <a href="https://files.covid19.ca.gov/pdf/guidance-bars--en.pdf">hướng dẫn dành cho quán bar, nhà máy bia và nhà máy chưng cất</a> <strong>không phục vụ bữa ăn</strong> này để hỗ trợ đảm bảo môi trường sạch sẽ, an toàn cho người lao động và khách hàng. Xem xét hướng dẫn, lập kế hoạch và đăng tải <a href="https://files.covid19.ca.gov/pdf/checklist-bars--en.pdf">danh mục kiểm tra dành cho các quầy bar</a> tại cơ sở làm việc của quý vị để cho khách hàng và nhân viên thấy quý vị đã giảm được nguy cơ và sẽ mở cửa kinh doanh trở lại. Các cơ sở phục vụ bữa ăn phải tuân thủ hướng dẫn và danh mục kiểm tra dành cho các nhà hàng.</p>
 
       </div>
     </div>
   </div>
 </cwds-accordion>
-
-
-
-
 
 
 
