--- a/ar/industry-guidance/index.html
+++ b/ar/industry-guidance/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>التوجيهات الخاصة بمجال الصناعة لتقليل خطر الإصابة</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;6:58 م الساعة 25 نوفمبر 2020</p>
+            <p class="small-text">آخر التحديثات&nbsp;9:24 ص الساعة 1 ديسمبر 2020</p>
           
         </div>
       </div>
@@ -1721,7 +1721,7 @@
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
 <p>اتبع هذا <a href="https://files.covid19.ca.gov/pdf/guidance-real-estate--ar.pdf">التوجيه الخاص بالأعمال التجارية العاملة في قطاع المعاملات العقارية</a> لإيجاد بيئة أكثر سلامة للعاملين.</p>
-<p>راجع التوجيهات، وقم بإعداد خطة، وانشر <a href="https://files.covid19.ca.gov/pdf/checklist-real-estate--ar.pdf">قائمة مراجعة للقطاع العقاري</a> في مكان العمل لكي تبين للعملاء والموظفين أنك قد قللت المخاطر وأنك قد فتحت نشاطك التجاري.</p>
+<p>راجع التوجيهات، وضع خطة، وانشر <a href="https://files.covid19.ca.gov/pdf/checklist-real-estate--ar.pdf">قائمة مراجعة للقطاع العقاري</a> في مكان عملك كي تبين للزبائن والموظفين أنك قد قللت من المخاطر، وأنك قد فتحت نشاطك التجاري.</p>
 
       </div>
     </div>
@@ -1743,7 +1743,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4 id="restaurants"><span class="ca-gov-icon-restaurant"></span> المطاعم والخمارات والحانات - تم التحديث في 25 نوفمبر</h4>
+<h4 id="restaurants"><span class="ca-gov-icon-restaurant"></span> المطاعم والخمارات والحانات - تم التحديث في 1 ديسمبر</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -1758,21 +1758,16 @@
 <p>الفئة الأدنى (أصفر)</p>
 <ul><li>المطاعم: <ul><li>الأماكن الداخلية مع إجراء تعديلات</li><li>يجب أن تقتصر الطاقة الاسيتعابية على 50٪</li></ul></li><li>مصانع الخمور  وقاعات التذوق:<ul><li>الأماكن المغلقة مع إجراء تعديلات</li><li>يجب أن تقتصر السعة على 50٪ أو 200 شخص، أيهما أقل</li></ul></li><li>الحانات ومصانع الجعة ومصانع التقطير: <ul><li>الأماكن الداخلية مع إجراء تعديلات</li><li>يجب أن تقتصر الطاقة الاستيعابية على 50٪</li></ul></li></ul>
 <p><strong>المطاعم</strong></p>
-<p>اتبع هذه <a href="https://files.covid19.ca.gov/pdf/guidance-restaurants-bars-wineries--ar.pdf">التوجيهات الخاصة بالمطاعم</a> لتوفير بيئة أكثر نظافة وأمانًا للموظفين والزبائن.</p>
+<p>اتبع هذه <a href="https://files.covid19.ca.gov/pdf/guidance-restaurants-bars-wineries--ar.pdf">التوجيهات الخاصة بالمطاعم</a> لتوفير بيئة أكثر نظافة وأمانًا للموظفين والزبائن. راجع التوجيهات، وضع خطة، وانشر <a href="https://files.covid19.ca.gov/pdf/checklist-restaurants-bars--ar.pdf">قائمة مراجعة بالمطاعم التي بها صالات لتناول الطعام</a> في مكان عملك كي تبين للزبائن والموظفين أنك قد قللت من المخاطر، وأنك قد فتحت نشاطك التجاري.</p>
 <p><strong>مصانع الخمور وقاعات التذوق</strong></p>
-<ul><li>اتبع هذه <a href="https://files.covid19.ca.gov/pdf/guidance-wineries--en.pdf">التوجيهات الخاصة بمصانع الخمور وقاعات التذوق</a> <strong> التي لا تقدم وجبات</strong> لتوفير بيئة أكثر نظافة وأمانًا للموظفين والزبائن. ينبغي على المنشآت التي تقدم وجبات اتباع توجيهات المطاعم. </li></ul>
+<p>اتبع هذه <a href="https://files.covid19.ca.gov/pdf/guidance-wineries--en.pdf">التوجيهات الخاصة بمصانع الخمور وقاعات التذوق</a> <strong> التي لا تقدم وجبات</strong> لتوفير بيئة أكثر نظافة وأمانًا للموظفين والزبائن. راجع التوجيهات، وقم بإعداد خطة، وانشر <a href="https://files.covid19.ca.gov/pdf/checklist-wineries--en.pdf">قائمة مراجعة لأندية القمار</a> في مكان عملك لكي تبين للعملاء والموظفين أنك قد قللت من الخطر وأنك جاهز لاستئناف العمل. يجب على المنشآت التي تقدم وجبات اتباع التوجيهات وقائمة المراجعة الخاصة بالمطاعم.</p>
 <p><strong>الحانات ومصانع الجعة ومصانع التقطير</strong></p>
-<ul><li>اتبع هذه <a href="https://files.covid19.ca.gov/pdf/guidance-bars--en.pdf">التوجيهات الخاصة بالحانات ومصانع الجعة ومصانع التقطير</a> <strong> التي لا تقدم وجبات</strong> لتوفير بيئة أكثر نظافة وأمانًا للموظفين والزبائن. ينبغي على المنشآت التي تقدم وجبات اتباع توجيهات المطاعم. </li></ul>
-<p>راجع التوجيهات، وجهز خطة وانشر <a href="https://files.covid19.ca.gov/pdf/checklist-restaurants-bars--ar.pdf">قائمة مراجعة بالمطاعم والخمارات والحانات</a> في مكان عملك لكي تبين للعملاء والموظفين أنك قد قللت من المخاطر وأن مشروعك التجاري مفتوح للعمل.</p>
+<p>اتبع هذه <a href="https://files.covid19.ca.gov/pdf/guidance-bars--en.pdf">التوجيهات الخاصة بالحانات ومصانع الجعة ومصانع التقطير</a> <strong> التي لا تقدم وجبات</strong> لتوفير بيئة أكثر نظافة وأمانًا للموظفين والزبائن. راجع التوجيهات، وضع خطة، وانشر <a href="https://files.covid19.ca.gov/pdf/checklist-bars--en.pdf">قائمة مراجعة للحانات</a> في مكان عملك كي تبين للعملاء والموظفين أنك قد قللت من الخطر، وأنك جاهز لاستئناف العمل. يجب على المنشآت التي تقدم وجبات اتباع التوجيهات وقائمة المراجعة الخاصة بالمطاعم. </p>
 
       </div>
     </div>
   </div>
 </cwds-accordion>
-
-
-
-
 
 
 
