--- a/ar/taxes/index.html
+++ b/ar/taxes/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>الضرائب.</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;9:13 ص الساعة 30 أكتوبر 2020</p>
+            <p class="small-text">آخر التحديثات&nbsp;4:40 م الساعة 30 نوفمبر 2020</p>
           
         </div>
       </div>
@@ -187,11 +187,11 @@
 
 
 
-<p>تقدم ولاية كاليفورنيا والحكومة الفيدرالية مساعدات ومزايا ضريبية للشركات التجارية الصغيرة. يتضمن هذا:</p>
+<p>تقدم ولاية كاليفورنيا والحكومة الفيدرالية مساعدات ومزايا ضريبية للشركات التجارية الصغيرة. يتضمن ذلك:</p>
 
 
 
-<ul><li>تأجيل لضرائب المبيعات/الاستخدام دون فوائد يصل إلى 50,000 دولار للشركات التي لديها مبيعات خاضعة للضرائب قيمتها أقل من 5 مليون دولار.</li><li>ائتمان ضريبي بقيمة 1000 دولار أمريكي للموظفين الجدد الذين عينتهم الشركات الصغيرة (حتى 100000 دولار لكل شركة)</li><li>استثناء واستبعاد "قروض برنامج حماية الرواتب المعفاة" من الدخل الإجمالي للولاية</li><li>إعفاءات ضريبية فيدرالية موجهة للأعمال التجارية الصغيرة وخاصة بإجازات الموظفين المدفوعة الأجر في ظل تفشي كوفيد-19</li></ul>
+<ul><li>ائتمانًا ضريبيًّا للتوظيف في الشركات الصغيرة، وهو ائتمان ضريبي بقيمة 1000 دولار أمريكي للموظفين الجدد الذين عينتهم الشركات الصغيرة (حتى 100000 دولار لكل شركة) <ul><li>للتقديم على هذا الائتمان، يرجى زيارة <a href="https://www.cdtfa.ca.gov/taxes-and-fees/SB1447-tax-credit.htm">الموقع الإلكترونى لإدارة الضرائب والرسوم</a></li></ul></li><li>تأجيلًا لضرائب المبيعات/الاستخدام دون فوائد يصل إلى 50000 دولار للشركات التي لديها مبيعات خاضعة للضرائب قيمتها أقل من 5 ملايين دولار</li><li>استثناء قروض برنامج حماية الرواتب (Paycheck Protection Program) المعفاة من الدخل الإجمالي للولاية</li><li>إعفاءات ضريبية فيدرالية موجهة للأعمال التجارية الصغيرة وخاصة بإجازات الموظفين المدفوعة الأجر في ظل تفشي كوفيد-19</li></ul>
 
 
 
