--- a/tl/taxes/index.html
+++ b/tl/taxes/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Mga Buwis</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Oktubre 30, 2020 sa 9:13 AM</p>
+            <p class="small-text">Huling na-update&nbsp;Nobyembre 30, 2020 sa 4:40 PM</p>
           
         </div>
       </div>
@@ -191,7 +191,7 @@
 
 
 
-<ul><li>Walang interes na pagpapaliban sa buwis sa benta/paggamit na hanggang $50,000 para sa mga negosyong may mas mababa sa $5 milyong benta na napapatawan ng buwis</li><li>$1,000 na credit sa buwis para sa mga bagong empleyado na kinuha ng maliliit na negosyo (hanggang $100,000 bawat negosyo)</li><li>Hindi kasama ang mga na-forgive na loan sa Paycheck Protection Program mula sa gross na kita ng estado</li><li>Mga credit sa buwis ng pederal sa maliliit na negosyo para sa bayad na leave ng empleyado sa panahon ng COVID-19</li></ul>
+<ul><li>Credit sa Buwis para sa Pag-hire ng Maliliit na Negosyo, na $1,000 na credit sa buwis para sa bawat bagong empleyado na hina-hire ng maliliit na negosyo (hanggang $100,000 bawat negosyo)<ul><li>Para makapag-apply para sa credit na ito, bisitahin ang <a href="https://www.cdtfa.ca.gov/taxes-and-fees/SB1447-tax-credit.htm">website ng Departamento ng Pangasiwaan ng Buwis at Bayarin</a></li></ul></li><li>Walang interes na pagpapaliban sa buwis sa benta/paggamit na hanggang $50,000 para sa mga negosyong may mas mababa sa $5 milyong benta na napapatawan ng buwis</li><li>Hindi kasama ang mga na-forgive na loan sa Paycheck Protection Program mula sa gross na kita ng estado</li><li>Mga credit sa buwis ng pederal sa maliliit na negosyo para sa bayad na leave ng empleyado sa panahon ng COVID-19</li></ul>
 
 
 
