--- a/vi/taxes/index.html
+++ b/vi/taxes/index.html
@@ -164,7 +164,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Thuế</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;30 tháng 10, 2020 lúc 9:13</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;30 tháng 11, 2020 lúc 16:40</p>
           
         </div>
       </div>
@@ -193,7 +193,7 @@
 
 
 
-<ul><li>Hoãn thuế bán hàng/thuế sử dụng không lãi suất lên tới $50,000 đối với các doanh nghiệp có mức doanh thu chịu thuế dưới $5 triệu</li><li>Một khoản tín dụng thuế $1,000 cho các nhân viên mới của các doanh nghiệp nhỏ (tối đa $100,000 mỗi doanh nghiệp)</li><li>Không bao gồm các khoản vay của Chương Trình Bảo Vệ Tiền Lương được xóa nợ từ tổng thu nhập của tiểu bang</li><li>Các khoản tín dụng thuế liên bang dành cho các doanh nghiệp nhỏ đối với những nhân viên nghỉ phép có hưởng lương trong đại dịch COVID-19</li></ul>
+<ul><li>Tín Dụng Thuế Tuyển Dụng Dành Cho Doanh Nghiệp Nhỏ, một khoản tín dụng thuế $1,000 cho mỗi nhân viên mới của các doanh nghiệp nhỏ (tối đa $100,000/doanh nghiệp)<ul><li>Để đăng ký nhận khoản tín dụng này, hãy truy cập <a href="https://www.cdtfa.ca.gov/taxes-and-fees/SB1447-tax-credit.htm">trang web của Cục Quản Lý Thuế Phí</a></li></ul></li><li>Hoãn thuế bán hàng/thuế sử dụng không lãi suất lên tới $50,000 đối với các doanh nghiệp có mức doanh thu chịu thuế dưới $5 triệu</li><li>Không bao gồm các khoản vay trong Chương Trình Bảo Vệ Tiền Lương được xóa nợ từ tổng thu nhập của tiểu bang</li><li>Các khoản tín dụng thuế liên bang dành cho các doanh nghiệp nhỏ đối với những nhân viên nghỉ phép có hưởng lương trong đại dịch COVID-19</li></ul>
 
 
 
