--- a/zh-hans/industry-guidance/index.html
+++ b/zh-hans/industry-guidance/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>有助于降低风险的行业指引</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2020年11月25日, 下午6:58</p>
+            <p class="small-text">最后更新时间&nbsp;2020年12月1日, 上午9:24</p>
           
         </div>
       </div>
@@ -1743,7 +1743,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4 id="restaurants"><span class="ca-gov-icon-restaurant"></span> 餐厅、酒庄和酒吧 — 更新于11月25日</h4>
+<h4 id="restaurants"><span class="ca-gov-icon-restaurant"></span> 餐厅、酒庄和酒吧 — 更新于12月1日</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -1758,21 +1758,16 @@
 <p>最小（黄色）</p>
 <ul><li>餐厅：<ul><li>经调整后在室内开放</li><li>容纳率必须限制在50%</li></ul></li><li>酒庄和品酒屋：<ul><li>经调整后在室内开放</li><li>容纳率必须限制在50%或200人，以人数较少者为准</li></ul></li><li>酒吧、啤酒厂和酿酒厂： <ul><li>经调整后在室内开放</li><li>容纳率必须限制在50%</li></ul></li></ul>
 <p><strong>餐厅</strong></p>
-<p>遵循此<a href="https://files.covid19.ca.gov/pdf/guidance-restaurants-bars-wineries--zh-hans.pdf">餐厅指引</a>，为员工和客户提供安全干净的环境。</p>
+<p>遵循此<a href="https://files.covid19.ca.gov/pdf/guidance-restaurants-bars-wineries--zh-hans.pdf">餐厅指引</a>，为员工和客户提供安全干净的环境。查看该指引，制定计划，并在工作场所张贴<a href="https://files.covid19.ca.gov/pdf/checklist-restaurants-bars--zh-hans.pdf">餐厅检查清单</a>，向客户和员工表明风险已降低并重新开展业务。</p>
 <p><strong>酒庄和品酒屋</strong></p>
-<ul><li>遵循此<a href="https://files.covid19.ca.gov/pdf/guidance-wineries--en.pdf">为</a> <strong>不提供餐食的酒庄和品酒屋提供的指引</strong>，为员工及顾客提供安全干净的环境。提供餐食的场所必须遵循餐厅指引。 </li></ul>
+<p>遵循此<a href="https://files.covid19.ca.gov/pdf/guidance-wineries--en.pdf">为</a> <strong>不提供餐食的酒庄和品酒屋提供的指引</strong>，为员工及顾客提供安全干净的环境。查看该指引，制定计划，并在工作场所张贴<a href="https://files.covid19.ca.gov/pdf/checklist-wineries--en.pdf">酒庄检查清单</a>，向客户和员工表明风险已降低并重新开展业务。提供餐食的场所必须遵循餐厅指引及检查清单。</p>
 <p><strong>酒吧、啤酒厂和酿酒厂</strong></p>
-<ul><li>遵循此<a href="https://files.covid19.ca.gov/pdf/guidance-bars--en.pdf">为</a> <strong>不提供餐食的酒吧、啤酒厂和酿酒厂提供的指引</strong>，为员工及顾客提供安全干净的环境。提供餐食的场所必须遵循餐厅指引。 </li></ul>
-<p>查看该指引，制定计划，并在工作场所发布<a href="https://files.covid19.ca.gov/pdf/checklist-restaurants-bars--zh-hans.pdf">餐厅、酒庄和酒吧清单</a>，向客户和员工表明风险已降低并重新开展业务。</p>
+<p>遵循此<a href="https://files.covid19.ca.gov/pdf/guidance-bars--en.pdf">为</a> <strong>不提供餐食的酒吧、啤酒厂和酿酒厂提供的指引</strong>，为员工及顾客提供安全干净的环境。查看该指引，制定计划，并在工作场所张贴<a href="https://files.covid19.ca.gov/pdf/checklist-bars--en.pdf">酒吧检查清单</a>，向客户和员工表明风险已降低并重新开展业务。提供餐食的场所必须遵循餐厅指引及检查清单。</p>
 
       </div>
     </div>
   </div>
 </cwds-accordion>
-
-
-
-
 
 
 
