--- a/zh-hans/taxes/index.html
+++ b/zh-hans/taxes/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>税收</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2020年10月30日, 上午9:13</p>
+            <p class="small-text">最后更新时间&nbsp;2020年11月30日, 下午4:40</p>
           
         </div>
       </div>
@@ -191,7 +191,7 @@
 
 
 
-<ul><li>对于应税销售额少于$500万的企业， 可免息推迟缴纳销售/使用税，最高$50,000。</li><li>针对小企业的新雇员工提供$1,000的税收抵免（每家企业最多$100,000）</li><li>州总收入不包括可免除的薪资保障计划贷款</li><li>针对COVID-19雇员带薪休假，为小企业提供联邦税收抵免</li></ul>
+<ul><li>小企业雇佣税收抵免，针对小企业雇佣的每位新员工提供$1,000的税收抵免（每家企业最多$100,000）<ul><li>如需申请此抵免，请浏览<a href="https://www.cdtfa.ca.gov/taxes-and-fees/SB1447-tax-credit.htm">税务和费用管理局的网站</a></li></ul></li><li>对于应税销售额少于$500万的企业， 可免息推迟缴纳销售/使用税，最高$50,000。</li><li>州总收入不包括可免除的薪资保障计划贷款</li><li>针对COVID-19雇员带薪休假，为小企业提供联邦税收抵免</li></ul>
 
 
 
