--- a/zh-hant/industry-guidance/index.html
+++ b/zh-hant/industry-guidance/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>有助於降低風險的行業指引</h1>
           
-            <p class="small-text">最近更新&nbsp;2020年11月25日, 下午6:58</p>
+            <p class="small-text">最近更新&nbsp;2020年12月1日, 上午9:24</p>
           
         </div>
       </div>
@@ -1743,7 +1743,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4 id="restaurants"><span class="ca-gov-icon-restaurant"></span> 餐廳、酒莊和酒吧 — 更新於11月25日</h4>
+<h4 id="restaurants"><span class="ca-gov-icon-restaurant"></span> 餐廳、酒莊和酒吧 — 更新於12月1日</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -1758,21 +1758,16 @@
 <p>最小（黃色）</p>
 <ul><li>餐廳：<ul><li>經調整後在室內開放</li><li>容納率必須限制在50%</li></ul></li><li>酒莊和品酒屋：<ul><li>經調整後在室內開放</li><li>容納率必須限制在50%或200人，以人數較少者為準</li></ul></li><li>酒吧、啤酒廠和釀酒廠：<ul><li>經調整後在室內開放</li><li>容納率必須限制在50%</li></ul></li></ul>
 <p><strong>餐廳</strong></p>
-<p>遵循此<a href="https://files.covid19.ca.gov/pdf/guidance-restaurants-bars-wineries--zh-hant.pdf">餐廳指引</a>，為員工及顧客提供安全乾淨的環境。</p>
+<p>遵循此<a href="https://files.covid19.ca.gov/pdf/guidance-restaurants-bars-wineries--zh-hant.pdf">餐廳指引</a>，為員工及顧客提供安全乾淨的環境。查看指引，制定計劃，並在您的工作場所張貼<a href="https://files.covid19.ca.gov/pdf/checklist-restaurants-bars--zh-hant.pdf">餐廳檢查清單</a>，向顧客和員工表明風險已降低並開始營業。</p>
 <p><strong>酒莊和品酒屋</strong></p>
-<ul><li>遵循此<a href="https://files.covid19.ca.gov/pdf/guidance-wineries--en.pdf">為不提供餐食</strong>的酒莊和品酒屋提供的指引</a> <strong>，為員工及顧客提供安全乾淨的環境。提供餐食的場所必須遵循餐廳指引。 </li></ul>
+<p>遵循此<a href="https://files.covid19.ca.gov/pdf/guidance-wineries--en.pdf">為不提供餐食</strong>的酒莊和品酒屋提供的指引</a> <strong>，為員工及顧客提供安全乾淨的環境。查看指引，制定計劃，並在您的工作場所張貼<a href="https://files.covid19.ca.gov/pdf/checklist-wineries--en.pdf">酒莊檢查清單</a>，向顧客和員工表明風險已降低並開始營業。提供餐食的場所必須遵循餐廳指引及檢查清單。</p>
 <p><strong>酒吧、啤酒廠和釀酒廠</strong></p>
-<ul><li>遵循此<a href="https://files.covid19.ca.gov/pdf/guidance-bars--en.pdf">為不提供餐食</strong>的酒吧、啤酒廠和釀酒廠提供的指引</a> <strong>，為員工及顧客提供安全乾淨的環境。提供餐食的場所必須遵循餐廳指引。 </li></ul>
-<p>查看指引，制定計劃，並在您的工作場所張貼<a href="https://files.covid19.ca.gov/pdf/checklist-restaurants-bars--zh-hant.pdf">餐廳、酒莊和酒吧清單</a>，向顧客和員工表明風險已降低並開始營業。</p>
+<p>遵循此<a href="https://files.covid19.ca.gov/pdf/guidance-bars--en.pdf">為不提供餐食</strong>的酒吧、啤酒廠和釀酒廠提供的指引</a> <strong>，為員工及顧客提供安全乾淨的環境。查看指引，制定計劃，並在您的工作場所張貼<a href="https://files.covid19.ca.gov/pdf/checklist-bars--en.pdf">酒吧檢查清單</a>，向顧客和員工表明風險已降低並開始營業。提供餐食的場所必須遵循餐廳指引及檢查清單。</p>
 
       </div>
     </div>
   </div>
 </cwds-accordion>
-
-
-
-
 
 
 
