--- a/zh-hant/taxes/index.html
+++ b/zh-hant/taxes/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>稅收</h1>
           
-            <p class="small-text">最近更新&nbsp;2020年10月30日, 上午9:13</p>
+            <p class="small-text">最近更新&nbsp;2020年11月30日, 下午4:40</p>
           
         </div>
       </div>
@@ -191,7 +191,7 @@
 
 
 
-<ul><li>對於應稅銷售額不足$500萬的企業，可免息延緩繳納銷售/使用稅，最高$50,000</li><li>針對小企業新僱的員工提供$1,000的稅收抵免（每家企業最多$100,000）</li><li>州總收入不包括可免除的薪資保障計劃 (Paycheck Protection Program) 貸款</li><li>針對COVID-19員工帶薪休假，為小企業提供聯邦稅收抵免</li></ul>
+<ul><li>小商業僱傭稅收抵免，針對小商業僱傭的每位新員工提供$1,000的稅收抵免（每家商業最多$100,000）<ul><li>如需申請此抵免，請造訪<a href="https://www.cdtfa.ca.gov/taxes-and-fees/SB1447-tax-credit.htm">稅務和費用管理局的網站</a></li></ul></li><li>對於應稅銷售額不足$500萬的企業，可免息延緩繳納銷售/使用稅，最高$50,000</li><li>州總收入不包括可免除的薪資保障計劃 (Paycheck Protection Program) 貸款</li><li>針對COVID-19員工帶薪休假，為小企業提供聯邦稅收抵免</li></ul>
 
 
 
