--- a/es/index.html
+++ b/es/index.html
@@ -423,8 +423,8 @@
 					</a>
 				</article>
 
-				<a href="https://youtu.be/8S5iiKx5dhc" class="link-arrow-blue mt-4">
-					<div class="link-arrow-label">Watch video</div>
+				<a href="https://toolkit.covid19.ca.gov" class="link-arrow-blue mt-4">
+					<div class="link-arrow-label">More video messages</div>
 					<cagov-arrow></cagov-arrow>
 				</a>
 
