deploy: cd680662fb2eec81f6a19980d1c442e82954675a

--- a/symptoms-and-risks/index.html
+++ b/symptoms-and-risks/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Symptoms and risks</h1>
           
-            <p class="small-text">Last updated&nbsp;November 25, 2020 at 5:43 PM</p>
+            <p class="small-text">Last updated&nbsp;December 2, 2020 at 5:31 PM</p>
           
         </div>
       </div>
@@ -247,7 +247,7 @@
 
 
 
-<ul class="js-qa js-qa-answer"><li>Seniors over 65</li><li>People with certain medical conditions:<ul><li>Cancer</li><li>Chronic kidney disease</li><li>COPD&nbsp;</li><li>Weakened immune system from organ transplant</li><li>Obesity&nbsp;</li><li>Serious heart conditions</li><li>Sickle cell disease</li><li>Smoking</li><li>Type 2 diabetes</li></ul></li></ul>
+<ul class="js-qa js-qa-answer"><li>Seniors over 65</li><li>People with certain medical conditions:<ul><li>Cancer</li><li>Chronic kidney disease</li><li>COPD </li><li>Weakened immune system from organ transplant</li><li>Obesity </li><li>Serious heart conditions</li><li>Pregnancy</li><li>Sickle cell disease</li><li>Smoking</li><li>Type 2 diabetes</li></ul></li></ul>
 
 
 
